readme and license setup complete

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <link rel="manifest" href="favicon_io/site.webmanifest">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="utils.css" rel="stylesheet" type="text/css" />
     <title>Standard Calculator</title>
@@ -17,7 +20,7 @@
 
 <body class="flexy flex-col">
     <nav class="nav-bar">
-        <p id="wel-para">Welcome to Cal<span id="q-format"> Q </span>!</p>
+        <p id="wel-para">Welcome to Cal<span id="q-format">Q</span></p>
     </nav>
     <div class="container flexy flex-col">
         <div class="row">
@@ -56,10 +59,10 @@
     </div>
 
     <footer class="footer-p">
-        <p>&copy; 2023 | Flames_004.All Rights Reserved.</p>
+        <span>&copy;2023 | Made with <i class="fa-solid fa-heart"></i> by Deepak Shukla</span>
     </footer>
-    <script src="script.js"></script>
 
 </body>
+<script src="script.js"></script>
 
 </html>
